--- a/templates/shared/site_header_component.html
+++ b/templates/shared/site_header_component.html
@@ -29,7 +29,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#">تماس با ما</a>
+                                        <a href="{% url 'contact' %}">تماس با ما</a>
                                     </li>
                                 </ul>
                             </nav>
@@ -44,7 +44,7 @@
                         <a href="#">
                             <i class="far fa-shopping-cart"></i>
                         </a>
-                        <a href="#" class="game-icon">ورود / ثبت نام</a>
+                        <a href="{% url 'register' %}" class="game-icon">ورود / ثبت نام</a>
                     </div>
                     <div class="header__hamburger d-xl-block my-auto">
                         <div class="sidebar__toggle">
