--- a/home_module/templates/home_module/index.html
+++ b/home_module/templates/home_module/index.html
@@ -1,5 +1,6 @@
 {% extends 'shared/_layout.html' %}
 {% load static %}
+{% block title %}ایکس اسپورت | خانه{% endblock %}
 {% block content %}
     <!-- GT About Section Start -->
     <section class="gt-about-section fix section-padding rtl">
