--- a/account_module/templates/account_module/login.html
+++ b/account_module/templates/account_module/login.html
@@ -1,37 +1,39 @@
 {% extends 'account_module/base.html' %}
 {% load static %}
-{% block title %}ورود{% endblock %}
+{% block title %}ثبت نام{% endblock %}
 {% block content %}
     <div class="limiter">
         <div class="container-login100" style="background-image: url('{% static 'account/images/pricing-bg.jpg' %}');">
             <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
-                <form class="login100-form validate-form">
-					<span class="login100-form-title p-b-49">
-						ورود
+                <form class="login100-form validate-form" autocomplete="off" novalidate method="post"
+                      action="{% url 'register' %}"> {% csrf_token %}
+                    <span class="login100-form-title p-b-49">
+						ثبت نام
 					</span>
-
-                    <div class="wrap-input100 validate-input m-b-23" data-validate="Username is reauired">
-                        <span class="label-input100">نام کاربری :</span>
-                        <input class="input100" type="text" name="username" placeholder="نام کاربری خود را وارد کنید">
-                        <span class="focus-input100" data-symbol="&#xf206;"></span>
+                    <div class="wrap-input100">
+                        <span class="label-input100">{{ register_form.email.label_tag }}</span>
+                        {{ register_form.email }}
                     </div>
-
-                    <div class="wrap-input100 validate-input" data-validate="Password is required">
-                        <span class="label-input100">کلمه عبور :</span>
-                        <input class="input100" type="password" name="pass" placeholder="کلمه عبور خود را وارد کنید">
+                    <div class="wrap-input100">
+                        <span class="label-input100">{{ register_form.password.label_tag }}</span>
+                        {{ register_form.password }}
                         <span class="focus-input100" data-symbol="&#xf190;"></span>
                     </div>
-
+                    <div class="wrap-input100">
+                        <span class="label-input100">{{ register_form.confirm_password.label_tag }}</span>
+                        {{ register_form.confirm_password }}
+                        <span class="focus-input100" data-symbol="&#xf190;"></span>
+                    </div>
                     <div class="text-right p-t-20 p-b-31">
                         <a href="#" class="color-white">
-                            کلمه عبور را فراموش کردید؟
+                            کلمه عبور رو یادت رفته؟
                         </a>
                     </div>
 
                     <div class="container-login100-form-btn">
                         <div class="wrap-login100-form-btn">
                             <div class="login100-form-bgbtn"></div>
-                            <button class="login100-form-btn">
+                            <button class="login100-form-btn" type="submit">
                                 ورود
                             </button>
                         </div>
