--- a/static/account/css/main.css
+++ b/static/account/css/main.css
@@ -479,3 +479,20 @@ iframe {
     padding-right: 15px;
   }
 }
+
+.form-clt-errors {
+    color: red !important;
+}
+
+@keyframes shake {
+  0% { transform: translateX(0); }
+  20% { transform: translateX(-5px); }
+  40% { transform: translateX(5px); }
+  60% { transform: translateX(-5px); }
+  80% { transform: translateX(5px); }
+  100% { transform: translateX(0); }
+}
+
+.shake {
+  animation: shake 0.4s ease;
+}
