--- a/account_module/templates/account_module/register.html
+++ b/account_module/templates/account_module/register.html
@@ -10,6 +10,13 @@
                     <span class="login100-form-title p-b-49">
 						ثبت نام
 					</span>
+                    {% if register_form.email.errors %}
+                        {% for error in register_form.email.errors %}
+                            <div class="alert alert-danger">
+                                {{ error }}
+                            </div>
+                        {% endfor %}
+                    {% endif %}
                     <div class="wrap-input100 {% if register_form.email.errors %}shake{% endif %}">
                         <span class="label-input100">{{ register_form.email.label_tag }}</span>
                         {{ register_form.email }}
@@ -24,27 +31,21 @@
                         {{ register_form.confirm_password }}
                         <span class="focus-input100" data-symbol="&#xf190;"></span>
                     </div>
-                    <div class="text-right p-t-20 p-b-31">
-                        <a href="#" class="color-white">
-                            کلمه عبور رو یادت رفته؟
-                        </a>
-                    </div>
-
                     <div class="container-login100-form-btn">
                         <div class="wrap-login100-form-btn">
                             <div class="login100-form-bgbtn"></div>
                             <button class="login100-form-btn" type="submit">
-                                ورود
+                                ثبت نام
                             </button>
                         </div>
                     </div>
                     <div class="flex-col-c p-t-30">
 						<span class="txt1 p-b-17">
-							حساب کاربری ندارید؟
+							از قبل حساب کاربری دارید؟
 						</span>
 
-                        <a href="#" class="txt2">
-                            ثبت نام کنید
+                        <a href="{% url 'login' %}" class="txt2">
+                            وارد شوید
                         </a>
                     </div>
                 </form>
