--- a/contact_module/templates/contact_module/contact.html
+++ b/contact_module/templates/contact_module/contact.html
@@ -12,7 +12,7 @@
                     <div class="col-lg-8">
                         <div class="gt-comment-form-wrap">
                             <h4>ما اینجاییم تا کمک کنیم!</h4>
-                            <p>آدرس ایمیل شما منتشر نخواهد شد. فیلدهای ضروری علامت‌گذاری شده‌اند. *</p>
+                            <p>آدرس ایمیل شما منتشر نخواهد شد. پر کردن تمامی فیلد ها ضروری میباشد.</p>
                             <b>
                                 {% if messages %}
                                     <div class="alert-container">
