--- a/account_module/templates/account_module/login.html
+++ b/account_module/templates/account_module/login.html
@@ -23,11 +23,11 @@
                             </div>
                         {% endfor %}
                     {% endif %}
-                    <div class="wrap-input100">
+                    <div class="wrap-input100{% if login_form.email.errors %}shake{% endif %}">
                         <span class="label-input100">{{ login_form.email.label_tag }}</span>
                         {{ login_form.email }}
                     </div>
-                    <div class="wrap-input100">
+                    <div class="wrap-input100  {% if login_form.password.errors %}shake{% endif %}">
                         <span class="label-input100">{{ login_form.password.label_tag }}</span>
                         {{ login_form.password }}
                         <span class="focus-input100" data-symbol="&#xf190;"></span>
