--- a/account_module/templates/account_module/forgot_password.html
+++ b/account_module/templates/account_module/forgot_password.html
@@ -9,6 +9,16 @@
                     <span class="login100-form-title p-b-49">
 						بازیابی کلمه عبور
 					</span>
+                    {% if messages %}
+                        {% for message in messages %}
+                            <div class="alert alert-success">{{ message }}</div>
+                        {% endfor %}
+                    {% endif %}
+                    {% if forgot_password_form.email.errors %}
+                        {% for error in forgot_password_form.email.errors %}
+                            <div class="alert alert-success">{{ error }}</div>
+                        {% endfor %}
+                    {% endif %}
                     <div class="wrap-input100{% if forgot_password_form.email.errors %}shake{% endif %}">
                         <span class="label-input100">{{ forgot_password_form.email.label_tag }}</span>
                         {{ forgot_password_form.email }}
