email service / authentication completed

--- a/account_module/templates/account_module/reset_password.html
+++ b/account_module/templates/account_module/reset_password.html
@@ -5,15 +5,21 @@
     <div class="limiter">
         <div class="container-login100" style="background-image: url('{% static 'account/images/pricing-bg.jpg' %}');">
             <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
-                <form class="login100-form validate-form" autocomplete="off" novalidate method="post" action="{% url 'reset_password' email_active_code=user.email_active_code %}"> {% csrf_token %}
+                <form class="login100-form validate-form" autocomplete="off" novalidate method="post"> {% csrf_token %}
                     <span class="login100-form-title p-b-49">
 						بازیابی کلمه عبور
 					</span>
-                    <div class="wrap-input100{% if reset_password_form.password.errors %}shake{% endif %}">
+                {% if messages %}
+                    {% for message in messages %}
+                    	{{ message }}
+                    {% endfor %}
+
+                {% endif %}
+                    <div class="wrap-input100 {% if reset_password_form.password.errors %}shake{% endif %}">
                         <span class="label-input100">{{ reset_password_form.password.label_tag }}</span>
                         {{ reset_password_form.password }}
                     </div>
-                    <div class="wrap-input100{% if reset_password_form.confirm_password.errors %}shake{% endif %}">
+                    <div class="wrap-input100 {% if reset_password_form.confirm_password.errors %}shake{% endif %}">
                         <span class="label-input100">{{ reset_password_form.confirm_password.label_tag }}</span>
                         {{ reset_password_form.confirm_password }}
                     </div>
