--- a/account_module/templates/account_module/login.html
+++ b/account_module/templates/account_module/login.html
@@ -33,7 +33,7 @@
                         <span class="focus-input100" data-symbol="&#xf190;"></span>
                     </div>
                     <div class="text-right p-t-20 p-b-31">
-                        <a href="#" class="color-white">
+                        <a href="{% url 'forgot_password' %}" class="color-white">
                             کلمه عبور رو یادت رفته؟
                         </a>
                     </div>
