--- a/templates/shared/site_header_component.html
+++ b/templates/shared/site_header_component.html
@@ -44,7 +44,11 @@
                         <a href="#">
                             <i class="far fa-shopping-cart"></i>
                         </a>
-                        <a href="{% url 'register' %}" class="game-icon">ورود / ثبت نام</a>
+                        {% if user.is_authenticated %}
+                            <a href="#" class="game-icon"><i class="fa fa-user"></i></a>
+                        {% else %}
+                            <a href="{% url 'login' %}" class="game-icon"><i class="fa fa-sign-in"></i></a>
+                        {% endif %}
                     </div>
                     <div class="header__hamburger d-xl-block my-auto">
                         <div class="sidebar__toggle">
